<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bachao</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="settings"><b>SETTINGS</b></string>
    <string name="ice">INCASE OF AN EMERGENCY</string>
    <string name="options">Options</string>
    <string name="btn_name">Back</string>
    <string name="on">ON</string>
    <string name="list_one_name">SMS my Location</string>
    <string name="list_one_boolean">OFF</string>
    <string name="list_two_name">Call a Number</string>
    <string name="list_three_name">Post on Facebook</string>
    <string name="list_four_name">Tweet on Twitter</string>
    <string name="facebook_settings"><b>FACEBOOK SETTINGS</b></string>
    <string name="post">Post on Facebook</string>
    <string name="log_folder">Bachao-logs</string>
    <string name="log_file">BachaoLogFile</string>
    <string name="log_extension">txt</string>
    <string name="post_text">Wall Post</string>
    <string name="log_in">Login with facebook</string>
    <string name="log_out">Logout</string>
    <string name="post_hint">Type the message to post</string>
    <string name="sms_location">SMS my Location</string>
    <string name="custom_message">Custom Message</string>
    <string name="save"><b>SAVE</b></string>
    <string name="hint_message">I\'m in an <b>EMERGENCY.</b></string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="new_contact">New Contact</string>
    <string name="wall_post">Post</string>
    <string name="sms_settings"><b>SMS SETTINGS</b></string>
    <string name="emergency">INCASE OF AN EMERGENCY</string>
    <string name="twitter_settings"><b>TWITTER SETTINGS</b></string>
    <string name="twitter_post">Tweet on Twitter</string>
    <string name="twitter_post_text">Tweet</string>
    <string name="twitter_post_hint">Type the message to tweet</string>
    <string name="message_one">I\'m in an <b>EMERGENCY.</b></string>
    <string name="message_two">I\'m now near</string>
    <string name="successfully_posted_post">Successfully posted </string>
    <string name="app_id">459827240753578</string>
    <string name="network_connection">No Network Connection</string>
    <string name="phone_number">Phone Number</string>
    <string name="call_settings"><b>CALL SETTINGS</b></string>
    <string name="clear">Clear the number</string>
    <string name="app_info">Long press the <font fgcolor="#ffff0000">BIG RED</font> button when you are in emergency. <b>Bachao</b> will alert your contacts on Phone, Facebook, Twitter and even makes a call to an emergency response number. </string>
    <string name="app_info_two">You would be always safe with Bachao app. Please navigate to Settings screen to configure them now !!</string>
    <string name="twitter_succes_message">Your message is successfully tweeted on Twitter</string>
    <string name="twitter_duplicate_message"> Do not Panic !! Your message is already tweeted on Twitter</string>
    <string name="call_error_message"> Please register emergency number to make a call</string>
    <string name="call_configure_number">  Please configure phone number to call.</string>
    <string name="call_input_message">Please input an emergency number</string>
    <string name="abandom_text">Abandon Changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="call_error_tap"> Please Tap on Save button</string>
    <string name="please_wait"> Please wait</string>
    <string name="logout_text"> Are you sure to Log out?</string>
    <string name="facebook_error_login">Please login to post message on wall</string>
    <string name="logged_text"> Logged in as</string>
    <string name="facebook_succes_post">Your message is successfully posted on Facebook</string>
    <string name="facebook_duplicate_post">Do not Panic !! Your message is already posted on Facebook</string>
    <string name="facebook_error_post">Your post on Facebook Wall failed due to technical reasons.</string>
    <string name="facebook_error_message">Please Login to post the message or Uncheck</string>
    <string name="twitter_error_message">Please Login to tweet the message or Uncheck</string>
    <string name="cancel">cancel</string>
    <string name="no_contact">This contact has no number</string>
    <string name="contact_selection"> Select at least one contact or Uncheck</string>
    <string name="error_msg"> Please configure atleast one option in settings screen</string>
    <string name="contact_alert">Please select at least one contact or uncheck</string>
    <string name="tweet_exceed_message">The text message can not exceed 100 characters</string>
    <string name="choose_number">Choose a number: </string>
    <string name="contact_exist">Contact already exists</string>
    <string name="loading_wait">Loading please wait...</string>
    <string name="logout">Log Out</string>
    <string name="hello">
<![CDATA[
<html>
 <head></head>
 <body style="text-align:justify;line-height:30px">
 <p>
  Long press the <font color="#FF0000">BIG RED</font> button when you are in emergency. <b>Bachao</b> will alert your contacts on Phone, Facebook, Twitter and even makes a call to an emergency response number.
 </p>
 <p>
 You would be always safe with Bachao app. Please navigate to Settings screen to configure them now !!
 </p>
 </body>
</html>
]]>
    </string>

</resources>