<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7" >

    <RelativeLayout
        android:id="@+id/id_twitter_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/strap"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/twitter_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/twitter_settings"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </RelativeLayout>

    <TextView
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_twitter_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/twitter_post"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <CheckBox
        android:id="@+id/twitter_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/post"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:button="@drawable/check_uncheck" />

    <View
        android:id="@+id/twitter_divider"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/post"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/divider" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitter_divider"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/twitter_post_text"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/post_message"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/post_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_post"
        android:gravity="top"
        android:hint="@string/message_one"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" />

    <Button
        android:id="@+id/twitter_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/twitter_save_btn"
        android:text="@string/save" />

    <Button
        android:id="@+id/twitter_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/twitter_save"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/twitter_login_btn" />

    <Button
        android:id="@+id/twitter_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/twitter_save"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/twitter_logged"
        android:text="@string/log_out"
        android:visibility="gone" />

</RelativeLayout>