<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    tools:context=".SOSAcitvity" >

    <RelativeLayout
        android:id="@+id/id_call_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/strap" >

        <TextView
            android:id="@+id/id_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/call_settings"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </RelativeLayout>

    <TextView
        android:id="@+id/id_call_a_number_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_call_settings"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/list_two_name"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <CheckBox
        android:id="@+id/check_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/id_call_a_number_view"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:button="@drawable/check_uncheck" />
    <!-- </RelativeLayout> -->

    <View
        android:id="@+id/call_divider"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/id_call_a_number_view"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/divider" />

    <TextView
        android:id="@+id/id_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_call_a_number_view"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <RelativeLayout
        android:id="@+id/edit_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_phone_number" >

        <EditText
            android:id="@+id/id_phone_number_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_phone_number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_number"
            android:inputType="number"
            android:maxLength="20"
            android:padding="10dp"
            android:paddingLeft="5dp" >
        </EditText>

        <ImageView
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/id_phone_number_field"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/clear"
            android:src="@drawable/clear_button"
            android:visibility="invisible" />
    </RelativeLayout>

    <Button
        android:id="@+id/id_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/twitter_save_btn"
        android:text="@string/save" />

</RelativeLayout>