<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    tools:context=".SOSAcitvity" >

    <RelativeLayout
        android:id="@+id/id_settings_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/strap" >

        <TextView
            android:id="@+id/id_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/settings"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </RelativeLayout>

    <TextView
        android:id="@+id/id_ice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_settings_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/ice"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <RelativeLayout
        android:id="@+id/settings_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_ice"
        android:layout_marginTop="10dp"
        android:background="@drawable/strap" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="4dp"
            android:text="@string/options"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </RelativeLayout>

    <!-- item one -->

    <RelativeLayout
        android:id="@+id/id_list_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_options" >

        <TextView
            android:id="@+id/id_list_one_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/list_one_name"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <ImageButton
            android:id="@+id/id_list_one_boolean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/next" />

        <TextView
            android:id="@+id/sms_bool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/id_list_one_boolean"
            android:text="@string/list_one_boolean"
            android:textColor="#3232FF" />

        <View
            android:id="@+id/list_one_divider"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@id/id_list_one_name"
            android:background="@drawable/divider" />
    </RelativeLayout>

    <!-- item two -->

    <RelativeLayout
        android:id="@+id/id_list_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_list_one" >

        <TextView
            android:id="@+id/id_list_two_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/list_two_name"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <ImageButton
            android:id="@+id/id_list_two_boolean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/next" />

        <TextView
            android:id="@+id/call_bool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/id_list_two_boolean"
            android:text="@string/list_one_boolean"
            android:textColor="#3232FF" />

        <View
            android:id="@+id/list_one_divider"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@id/id_list_two_name"
            android:background="@drawable/divider" />
    </RelativeLayout>

    <!-- item three -->

    <RelativeLayout
        android:id="@+id/id_list_three"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_list_two" >

        <TextView
            android:id="@+id/id_list_three_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/list_three_name"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <ImageButton
            android:id="@+id/id_list_three_boolean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/next" />

        <TextView
            android:id="@+id/facebook_bool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/id_list_three_boolean"
            android:text="@string/list_one_boolean"
            android:textColor="#3232FF" />

        <View
            android:id="@+id/list_one_divider"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@id/id_list_three_name"
            android:background="@drawable/divider" />
    </RelativeLayout>

    <!-- item four -->

    <RelativeLayout
        android:id="@+id/id_list_four"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_list_three" >

        <TextView
            android:id="@+id/id_list_four_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/list_four_name"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <ImageButton
            android:id="@+id/id_list_four_boolean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/next" />

        <TextView
            android:id="@+id/twitter_bool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/id_list_four_boolean"
            android:text="@string/list_one_boolean"
            android:textColor="#3232FF" />

        <View
            android:id="@+id/list_four_divider"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_below="@id/id_list_four_name"
            android:background="@drawable/divider" />
    </RelativeLayout>

</RelativeLayout>