<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7" >

    <RelativeLayout
        android:id="@+id/id_facebook_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/strap"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/facebook_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/facebook_settings"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </RelativeLayout>

    <TextView
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_facebook_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/post"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <CheckBox
        android:id="@+id/facebook_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/post"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:button="@drawable/check_uncheck" />

    <View
        android:id="@+id/facebook_divider"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/post"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/divider" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebook_divider"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/post_text"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/post_message"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/post_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_post"
        android:gravity="top"
        android:hint="@string/message_one"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" />

    <com.facebook.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/facebook_save"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp" />

    <RelativeLayout
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/facebook_save"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/facebook_logged"
        android:visibility="invisible" >

        <com.facebook.widget.ProfilePictureView
            android:id="@+id/profilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            facebook:preset_size="small" />

        <TextView
            android:id="@+id/logout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/profilePicture"
            android:padding="10dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <Button
        android:id="@+id/facebook_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/twitter_save_btn"
        android:text="@string/save" />

</RelativeLayout>